[package]
name = "fs4"
# NB: When modifying, also modify html_root_url in lib.rs
version = "0.5.2"
authors = ["Dan Burkert <dan@danburkert.com>", "Al Liu <scygliu1@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/al8n/fs4-rs"
documentation = "https://docs.rs/fs4"
description = "Cross-platform file locks and file duplication. Original fs2, now supports async."
keywords = ["file", "file-system", "lock", "duplicate", "flock"]
edition = "2021"

[features]
default = ["sync"]
sync = []
std-async = ["async-std/async-io", "async-trait"]
tokio-async = ["tokio/fs", "async-trait"]
smol-async = ["smol", "async-trait"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["handleapi", "processthreadsapi", "winerror", "fileapi", "winbase", "std"] }

[dependencies]
async-trait = { version = "0.1", optional = true }
async-std = { version = "1.10", optional = true }
smol = { version = "1.2.5", optional = true }
tokio = { version = "1.15", optional = true }

[dev-dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
smol-potat = "1.1.2"
tempdir = "0.3"
tokio = { version = "1.15", features = ["full"]}

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
